--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   crypto: ^3.0.3
   path: ^1.9.0
   shared_preferences: ^2.2.3
+  image_picker: ^1.0.7
+  path_provider: ^2.1.2
 
 flutter:
   uses-material-design: true
