--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   shared_preferences: ^2.2.3
   image_picker: ^1.0.7
   path_provider: ^2.1.2
+  intl: ^0.19.0
+  # blue_thermal_printer: ^1.2.3
+  # flutter_bluetooth_basic: ^0.1.7
 
 flutter:
   uses-material-design: true
