--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,29 +1,36 @@
 name: kasir_app
 description: A simple POS login with Flutter + SQLite
+
 environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.3.3
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.20.2
   crypto: ^3.0.3
+  sqflite: ^2.3.3
   path: ^1.9.0
   shared_preferences: ^2.2.3
   image_picker: ^1.0.7
-  path_provider: ^2.1.2
-  intl: ^0.19.0
-  # blue_thermal_printer: ^1.2.3
-  # flutter_bluetooth_basic: ^0.1.7
+  path_provider: ^2.1.2          
+  # flutter_pos_printer_platform: ^1.3.0
+  esc_pos_utils: ^1.1.0
 
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/images/login_bg.png        # latar motif (opsional)
-    - assets/images/coffee_illustr.png  # ilustrasi panel kanan
-    - assets/images/logo.png            # logo bulat
+  # HAPUS esc_pos_utils jika tidak dipakai:
+  # esc_pos_utils: ^1.1.0
+  # Biarkan paket printer lain nanti kalau sudah butuh dan kompatibel
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/images/login_bg.png
+    - assets/images/coffee_illustr.png
+    - assets/images/logo.png
